substrate/primitives/api/test/tests/ui/type_reference_in_impl_runtime_apis_call.stderr
error[E0053]: method `test` has an incompatible type for trait
  --> tests/ui/type_reference_in_impl_runtime_apis_call.rs:33:17
   |
33 |         fn test(data: &u64) {
   |                       ^^^^
   |                       |
   |                       expected `u64`, found `&u64`
   |                       help: change the parameter type to match the trait: `u64`
   |
note: type in trait
  --> tests/ui/type_reference_in_impl_runtime_apis_call.rs:27:17
   |
27 |         fn test(data: u64);
   |                       ^^^
   = note: expected signature `fn(u64)`
              found signature `fn(&u64)`

error[E0308]: mismatched types
  --> tests/ui/type_reference_in_impl_runtime_apis_call.rs:33:11
   |
31 | / sp_api::impl_runtime_apis! {
32 | |     impl self::Api<Block> for Runtime {
33 | |         fn test(data: &u64) {
   | |                 ^^^^^^^ expected `u64`, found `&u64`
34 | |             unimplemented!()
...  |
48 | |     }
49 | | }
   | |_- arguments to this function are incorrect
   |
note: associated function defined here
  --> tests/ui/type_reference_in_impl_runtime_apis_call.rs:27:6
   |
27 |         fn test(data: u64);
   |            ^^^^
help: consider removing the borrow
   |
33 |         fn test(data: &u64) {
   |
